src/test/deca/syntax/parser/valid/cast_int_to_float.deca
// Parser test, cast an int cast in a float

{
    int x = 5;
    float f = (float) (x);
}