src/test/deca/syntax/parser/invalid/cast_int_to_number.deca
// Parser test, int casted to reserved word

{
    int x = 5;
    (145) (x);
}